assets/css/my_adjustments.css
/** @file   my_adjustments.css
  *
  * Zde se nachází moje úpravy CSS, díky kterým je můj web
  * ještě krásnější, než kdy dříve.
 */

.btn-gitlab .icon {
  background: url('/assets/gitlab-logo-16x16-final.png') 0 0 no-repeat;
  opacity: 0.6;
}

.btn-o-mne {
  float: right;
  text-align: center;
}

.site-title {
  margin: 0;
}

.site-description {
  color: #888;
}

.site-description {
  margin: 0 0 20px 40px;
}

article[class='post'] {
  margin-bottom: 3.67em;
}

.post-list > li:not(:last-child) {
  margin-bottom: 0.8em;
}

.post-tags {
  text-align: right;
  margin-top: 0.8em;
}

